[package]
name = "proxy"
version = "0.1.0"
edition = "2021"
description = "A Rust-based AWS Lambda function that proxies REST API requests."
authors = ["Sergey Kovalev <https://https://github.com/kovalev-sergey>"]
license = "MIT"
publish = false
repository = "https://github.com/kovalev-sergey/lambda_proxy/"
readme = "README.md"

[dependencies]
lambda_http = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["rustls-tls", "blocking", "json", "gzip"], default-features = false }
tokio = { version = "1", features = ["macros"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["json"] }
tracing = "0.1"
async-trait = "0.1.59"
mockall = "0.12.1"

[dev-dependencies]
mockito = "0.31.0"
once_cell = "1.19.0"
mockall = "0.12.1"
http = "0.2"

